# simpledvdlogo

./: CMakeLists.txt  README.md  main.cpp
